--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "runjs": "^4.3.3",
     "sinon": "^7.1.1",
     "sinon-chai": "^3.3.0",
+    "standard-version": "^4.4.0",
     "webpack": "^4.28.4",
     "webpack-cli": "^3.2.1"
   },
