--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@babel/runtime-corejs2": "^7.2.0",
     "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
@@ -63,10 +64,6 @@
     "webpack-cli": "^3.2.1"
   },
   "dependencies": {
-    "@linx-impulse/commons-js": "git+ssh://git@github.com:chaordic/commons-js.git",
-    "axios": "0.18.0",
-    "joi": "14.3.1",
-    "joi-browser": "13.4.0",
-    "query-string": "6.2.0"
+    "@linx-impulse/commons-js": "git+ssh://git@github.com:chaordic/commons-js.git"
   }
 }
