--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-loader": "^8.0.4",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
+    "docdash": "^1.1.1",
     "eslint": "^5.6.1",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-import-resolver-webpack": "^0.10.1",
@@ -36,6 +37,7 @@
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
+    "jsdoc": "^3.6.3",
     "karma": "^3.1.3",
     "karma-chai": "^0.1.0",
     "karma-chrome-launcher": "^2.2.0",
